Playerクラス追加 Playerが星と当たったら同じ軌道になるように修正

--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="Source\GamePlay.cpp" />
     <ClCompile Include="Source\Load.cpp" />
     <ClCompile Include="Source\main..cpp" />
+    <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Point.cpp" />
     <ClCompile Include="Source\Renderer.cpp" />
     <ClCompile Include="Source\Rock.cpp" />
@@ -42,6 +43,7 @@
     <ClInclude Include="Source\GamePlay.h" />
     <ClInclude Include="Source\IScene.h" />
     <ClInclude Include="Source\Load.h" />
+    <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\Point.h" />
     <ClInclude Include="Source\Renderer.h" />
     <ClInclude Include="Source\Rock.h" />
