--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -21,6 +21,7 @@
     <ClCompile Include="Source\main..cpp" />
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Point.cpp" />
+    <ClCompile Include="Source\MyRectangle.cpp" />
     <ClCompile Include="Source\Renderer.cpp" />
     <ClCompile Include="Source\Rock.cpp" />
     <ClCompile Include="Source\SceneManager.cpp" />
@@ -47,6 +48,7 @@
     <ClInclude Include="Source\Load.h" />
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\Point.h" />
+    <ClInclude Include="Source\MyRectangle.h" />
     <ClInclude Include="Source\Renderer.h" />
     <ClInclude Include="Source\Rock.h" />
     <ClInclude Include="Source\SceneManager.h" />
