--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -31,11 +31,17 @@
     <Filter Include="ヘッダー ファイル\scene">
       <UniqueIdentifier>{95d4af53-4dcc-4e6a-868c-956c7f2af5c4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\star">
-      <UniqueIdentifier>{eb806f6e-faf2-44e8-acc5-c5eaf01de153}</UniqueIdentifier>
+    <Filter Include="ソース ファイル\gameobject">
+      <UniqueIdentifier>{bdecc81b-5679-4e78-ba20-c2338ffba163}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\star">
+    <Filter Include="ヘッダー ファイル\gameobject">
+      <UniqueIdentifier>{b76604a6-dfdc-4154-8a1d-a6b6d58b9d38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\gameobject\star">
       <UniqueIdentifier>{084d0ed7-5466-42f4-9586-6faf3ddce960}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\gameobject\star">
+      <UniqueIdentifier>{eb806f6e-faf2-44e8-acc5-c5eaf01de153}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -75,22 +81,7 @@
     <ClCompile Include="Source\CSVStream.cpp">
       <Filter>ソース ファイル\util</Filter>
     </ClCompile>
-    <ClCompile Include="Source\GameObjControl.cpp">
-      <Filter>ソース ファイル\stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\GameObject.cpp">
-      <Filter>ソース ファイル\stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Rock.cpp">
-      <Filter>ソース ファイル\stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Star.cpp">
-      <Filter>ソース ファイル\stage</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Stage.cpp">
-      <Filter>ソース ファイル\stage</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Player.cpp">
       <Filter>ソース ファイル\stage</Filter>
     </ClCompile>
     <ClCompile Include="Source\Scroll.cpp">
@@ -103,16 +94,43 @@
       <Filter>ソース ファイル\util</Filter>
     </ClCompile>
     <ClCompile Include="Source\Star_cricle.cpp">
-      <Filter>ソース ファイル\star</Filter>
+      <Filter>ソース ファイル\gameobject\star</Filter>
     </ClCompile>
     <ClCompile Include="Source\Star_eight.cpp">
-      <Filter>ソース ファイル\star</Filter>
+      <Filter>ソース ファイル\gameobject\star</Filter>
     </ClCompile>
     <ClCompile Include="Source\Star_pendulum.cpp">
-      <Filter>ソース ファイル\star</Filter>
+      <Filter>ソース ファイル\gameobject\star</Filter>
     </ClCompile>
     <ClCompile Include="Source\Star_wave.cpp">
-      <Filter>ソース ファイル\star</Filter>
+      <Filter>ソース ファイル\gameobject\star</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Star_paradola.cpp">
+      <Filter>ソース ファイル\gameobject\star</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Star_slashdown.cpp">
+      <Filter>ソース ファイル\gameobject\star</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Animation.cpp">
+      <Filter>ソース ファイル\util</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\AnimationTimer.cpp">
+      <Filter>ソース ファイル\util</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Rock.cpp">
+      <Filter>ソース ファイル\gameobject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObject.cpp">
+      <Filter>ソース ファイル\gameobject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>ソース ファイル\gameobject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Star.cpp">
+      <Filter>ソース ファイル\gameobject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObjControl.cpp">
+      <Filter>ソース ファイル\gameobject</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -161,25 +179,7 @@
     <ClInclude Include="Source\CSVStream.h">
       <Filter>ヘッダー ファイル\util</Filter>
     </ClInclude>
-    <ClInclude Include="Source\GAMEOBJ_TYPE.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\GameObjControl.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Rock.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Stage.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Star.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\GamaObject.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Player.h">
       <Filter>ヘッダー ファイル\stage</Filter>
     </ClInclude>
     <ClInclude Include="Source\Scroll.h">
@@ -192,19 +192,49 @@
       <Filter>ヘッダー ファイル\util</Filter>
     </ClInclude>
     <ClInclude Include="Source\Star_cricle.h">
-      <Filter>ヘッダー ファイル\star</Filter>
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
     </ClInclude>
     <ClInclude Include="Source\Star_eight.h">
-      <Filter>ヘッダー ファイル\star</Filter>
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
     </ClInclude>
     <ClInclude Include="Source\Star_pendulum.h">
-      <Filter>ヘッダー ファイル\star</Filter>
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
     </ClInclude>
     <ClInclude Include="Source\Star_wave.h">
-      <Filter>ヘッダー ファイル\star</Filter>
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
     </ClInclude>
     <ClInclude Include="Source\IStarMove.h">
-      <Filter>ヘッダー ファイル\star</Filter>
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Star_parabola.h">
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Star_slashdown.h">
+      <Filter>ヘッダー ファイル\gameobject\star</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Animation.h">
+      <Filter>ヘッダー ファイル\util</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\AnimationTimer.h">
+      <Filter>ヘッダー ファイル\util</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GamaObject.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GAMEOBJ_TYPE.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Rock.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Star.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameObjControl.h">
+      <Filter>ヘッダー ファイル\gameobject</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
