--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Source\game.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Source\main..cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Ending.cpp">
       <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
@@ -131,6 +128,9 @@
     </ClCompile>
     <ClCompile Include="Source\GameObjControl.cpp">
       <Filter>ソース ファイル\gameobject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\main.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
