--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="Source\GameObjControl.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
     <ClCompile Include="Source\GamePlay.cpp" />
+    <ClCompile Include="Source\Goal.cpp" />
     <ClCompile Include="Source\Load.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Planet.cpp" />
@@ -34,6 +35,7 @@
     <ClCompile Include="Source\Stage.cpp" />
     <ClCompile Include="Source\StageSelect.cpp" />
     <ClCompile Include="Source\Star.cpp" />
+    <ClCompile Include="Source\Start.cpp" />
     <ClCompile Include="Source\Star_cricle.cpp" />
     <ClCompile Include="Source\Star_eight.cpp" />
     <ClCompile Include="Source\Star_paradola.cpp" />
@@ -57,6 +59,7 @@
     <ClInclude Include="Source\GameObjControl.h" />
     <ClInclude Include="Source\GAMEOBJ_TYPE.h" />
     <ClInclude Include="Source\GamePlay.h" />
+    <ClInclude Include="Source\Goal.h" />
     <ClInclude Include="Source\IScene.h" />
     <ClInclude Include="Source\IStarMove.h" />
     <ClInclude Include="Source\Load.h" />
