--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -20,10 +20,9 @@
     <ClCompile Include="Source\GameObjControl.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
     <ClCompile Include="Source\GamePlay.cpp" />
-    <ClCompile Include="Source\Goal.cpp" />
+    <ClCompile Include="Source\ImMovable.cpp" />
     <ClCompile Include="Source\Load.cpp" />
     <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Planet.cpp" />
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Point.cpp" />
     <ClCompile Include="Source\MyRectangle.cpp" />
@@ -36,7 +35,6 @@
     <ClCompile Include="Source\StageSelect.cpp" />
     <ClCompile Include="Source\Star.cpp" />
     <ClCompile Include="Source\StarManager.cpp" />
-    <ClCompile Include="Source\Start.cpp" />
     <ClCompile Include="Source\Star_cricle.cpp" />
     <ClCompile Include="Source\Star_eight.cpp" />
     <ClCompile Include="Source\Star_paradola.cpp" />
@@ -60,11 +58,10 @@
     <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\GAMEOBJ_TYPE.h" />
     <ClInclude Include="Source\GamePlay.h" />
-    <ClInclude Include="Source\Goal.h" />
+    <ClInclude Include="Source\ImMovable.h" />
     <ClInclude Include="Source\IScene.h" />
     <ClInclude Include="Source\IStarMove.h" />
     <ClInclude Include="Source\Load.h" />
-    <ClInclude Include="Source\Planet.h" />
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\Point.h" />
     <ClInclude Include="Source\MyRectangle.h" />
